<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarContacto">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="379dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:text="FORMULARIO DE CONTACTO"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDescripcion"
        android:layout_width="392dp"
        android:layout_height="104dp"
        android:layout_marginTop="8dp"
        android:text="Este es un formulario de contacto destinado al registro de personas, sus datos personales e intereses"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <ScrollView
        android:layout_width="399dp"
        android:layout_height="630dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:text="@string/nombre"
                android:textColor="#757575" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_nombre"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/txtApellido"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:text="@string/apellido" />

            <EditText
                android:id="@+id/etApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_apellido"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <TextView
                android:id="@+id/txtTelefono"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="10dp"
                android:text="@string/teléfono" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etTelefono"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/txt_teléfono"
                        android:inputType="phone"
                        android:minHeight="48dp" />

                    <Spinner
                        android:id="@+id/spinner_tel"
                        android:layout_width="191dp"
                        android:layout_height="48dp"
                        tools:ignore="SpeakableTextPresentCheck" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:text="@string/email" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etMail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp" />

                <Spinner
                    android:id="@+id/spinner_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtDireccion"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:text="@string/dirección" />

            <EditText
                android:id="@+id/etDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_dirección"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/txtNac"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_marginTop="10dp"
                android:text="@string/fechaNac" />

            <EditText
                android:id="@+id/etFechaNac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_fechaNac"
                android:inputType="date"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/btnContinuar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="MasDatos"
                android:text="@string/button" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>